# mdcat

./: CHANGELOG.md  Cargo.toml  README.md  config.toml.example  deny.toml  mdcat.1.adoc
pulldown-cmark-mdcat/: Cargo.toml  README.md
pulldown-cmark-mdcat/examples/: ratatui.rs
pulldown-cmark-mdcat/src/: lib.rs  ratatui.rs  render.rs  terminal.rs  theme.rs
pulldown-cmark-mdcat/src/render/: data.rs  highlighting.rs  math.rs  state.rs  write.rs
pulldown-cmark-mdcat/src/resources/: image.rs
pulldown-cmark-mdcat/src/snapshots/: pulldown_cmark_mdcat__tests__layout__begins_with_block_quote.snap  pulldown_cmark_mdcat__tests__layout__flush_ref_links_at_end.snap  pulldown_cmark_mdcat__tests__layout__flush_ref_links_before_toplevel_heading.snap  pulldown_cmark_mdcat__tests__layout__heading_in_block_quote.snap  pulldown_cmark_mdcat__tests__layout__heading_levels.snap  pulldown_cmark_mdcat__tests__layout__rule_in_block_quote.snap
pulldown-cmark-mdcat/src/terminal/: capabilities.rs  detect.rs
pulldown-cmark-mdcat/src/terminal/capabilities/: iterm2.rs  kitty.rs  sixel.rs
pulldown-cmark-mdcat/tests/: render.rs  wrapping.rs
pulldown-cmark-mdcat/tests/markdown/samples/: code_blocks.md  footnotes.md  math.md  tables.md
pulldown-cmark-mdcat/tests/snapshots/render/: ansi@commonmark-spec-001-tabs.snap  ansi@commonmark-spec-002-tabs.snap  ansi@commonmark-spec-003-tabs.snap  ansi@commonmark-spec-005-tabs.snap  ansi@commonmark-spec-006-tabs.snap  ansi@commonmark-spec-007-tabs.snap  ansi@commonmark-spec-008-tabs.snap  ansi@commonmark-spec-010-tabs.snap  ansi@commonmark-spec-018-backslash_escapes.snap  ansi@commonmark-spec-019-backslash_escapes.snap  ansi@commonmark-spec-024-backslash_escapes.snap  ansi@commonmark-spec-034-entity_and_numeric_character_references.snap  ansi@commonmark-spec-036-entity_and_numeric_character_references.snap  ansi@commonmark-spec-048-thematic_breaks.snap  ansi@commonmark-spec-059-thematic_breaks.snap  ansi@commonmark-spec-062-atx_headings.snap  ansi@commonmark-spec-066-atx_headings.snap  ansi@commonmark-spec-067-atx_headings.snap  ansi@commonmark-spec-068-atx_headings.snap  ansi@commonmark-spec-069-atx_headings.snap  ansi@commonmark-spec-071-atx_headings.snap  ansi@commonmark-spec-072-atx_headings.snap  ansi@commonmark-spec-073-atx_headings.snap  ansi@commonmark-spec-074-atx_headings.snap  ansi@commonmark-spec-075-atx_headings.snap  ansi@commonmark-spec-076-atx_headings.snap  ansi@commonmark-spec-077-atx_headings.snap  ansi@commonmark-spec-078-atx_headings.snap  ansi@commonmark-spec-079-atx_headings.snap  ansi@commonmark-spec-080-setext_headings.snap  ansi@commonmark-spec-081-setext_headings.snap  ansi@commonmark-spec-082-setext_headings.snap  ansi@commonmark-spec-083-setext_headings.snap  ansi@commonmark-spec-084-setext_headings.snap  ansi@commonmark-spec-085-setext_headings.snap  (+419 more)
src/: args.rs  (+5 more)
(+11 files in other folders)
